# html_vault

./: .dockerignore  .env.example  .env.secure.example  .gitignore  ARCHITECTURE.md  CHANGELOG.ja.md  CHANGELOG.md  CHANGELOG.zh-CN.md  DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  Dockerfile  Dockerfile.api  LICENSE  MIGRATION.md  README.ja.md  README.md  README.zh-CN.md  compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
app_static/: app.js  config.example.js  config.js  index.html  manifest.webmanifest  style.css  sw.js
deploy/: Caddyfile  api-entrypoint.sh  caddy-basic-auth.Caddyfile
docs/: index.html
docs/assets/: site.css  site.js
docs/demo/: app.js  config.example.js  index.html  manifest.en.json  manifest.ja.json  manifest.json  manifest.webmanifest  style.css  sw.js
docs/demo/content/demo-notes/: changelog.en.html  changelog.ja.html  changelog.zh-CN.html  readme.en.html  readme.ja.html  readme.zh-CN.html
examples/content/imported/: docker-network.html
examples/content/reading/: knowledge-workspace.html
html_lore/: __init__.py  builder.py  cli.py  manifest.py  metadata.py
html_lore/server/: __init__.py  __main__.py  app.py  auth.py  config.py  items.py  jobs.py  navigation.py  shares.py  uploads.py  users.py
html_lore/server/ai/: __init__.py  api.py  context.py  conversations.py  eval.py  external_search.py  guardrails.py  html_generation.py  html_generation_graph.py  jobs.py  knowledge_qa_graph.py  material_generation.py  model_client.py  providers.py  rate_limit.py  registry.py  research.py  retrieval.py  runs.py  skills.py  vector_maintenance.py  vector_store.py
html_vault/: __init__.py  builder.py  cli.py  manifest.py  metadata.py
html_vault/server/: __init__.py  __main__.py  app.py  auth.py  config.py  items.py  jobs.py  navigation.py  uploads.py  users.py
site/: index.html
site/assets/: site.css  site.js
site/demo/: app.js  config.example.js  config.js  index.html  manifest.en.json  manifest.ja.json  style.css  sw.js
tests/: api_server.py  run_smoke.py  test_builder.py  test_cli_entrypoints.py  test_deploy_config.py  test_legacy_namespace.py  test_manifest_v2.py  test_server_ai.py  test_server_items.py  test_server_jobs.py  test_server_navigation.py  test_server_security.py  test_server_shares.py  test_server_uploads.py
tests/e2e/: demo-home-button.spec.js  mobile-and-share.spec.js  reader-mobile.spec.js  settings-mobile.spec.js  workspace-ai.spec.js
(+9 files in other folders)
