[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html-vault"
version = "0.4.9"
description = "Static-first HTML knowledge workspace with card browsing and manifest generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "JMoCoder" }
]
keywords = ["html", "knowledge-base", "static-site", "self-hosted"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27,<0.29"
]
agent = [
  "fastapi>=0.111,<0.116",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9"
]

[project.scripts]
html-vault = "html_vault.cli:main"

[tool.setuptools.packages.find]
include = ["html_vault*"]

[tool.setuptools.package-data]
html_vault = ["templates/*.html"]
